fixed some minor issues with pictures not fitting evenly.

--- a/Style.css
+++ b/Style.css
@@ -109,7 +109,7 @@ h1 {
 }
 .fa-twitter 
 {
-background: rgb(92, 125, 196);
+background: #3B5998;
 color: white;
 border-color: rgba(0,0,0,0.2);
 
